Today completed 2 excersices

--- a/excersize1.html
+++ b/excersize1.html
@@ -20,8 +20,8 @@
 <h6>Willing to learn.</h6>
 <figure>
 <figcaption>Manikanda Aravinth K</figcaption>
-<img src="Aravinth.jpeg"Height="200"width="250"/>
-<button style="color:darkgreen">Submit</button>
+<img src="Aravinth.jpeg"Height="200"width="250"/><br>
+<button style="color:rgb(106, 19, 19);">Submit</button>
 </figure>
 </body>
 </html>
